init layout test page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-波波 个人站点成立了
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>appbir_layout</title>
+  </head>
+  <body>
+  <script type="text/javascript" src="main.bundle.js"></script></body>
+</html>
