--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <title>appbir_layout</title>
   </head>
   <body>
-  <script type="text/javascript" src="main.bundle.js"></script></body>
+  	波波  个人站点建设中  加油  玩出个人特色来吧
+  </body>
 </html>
